[package]
name = "rust_blockchain_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
utoipa = { version = "5.1.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
ethers = "2.0.14"
dotenv = "0.15.0"